--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "postinstall": "node ./node_modules/typescript/bin/tsc -p ."
+    "postinstall": "node %DEPLOYMENT_TARGET%/node_modules/typescript/bin/tsc -p ."
   },
   "repository": {
     "type": "git",
