--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "postinstall": "node %DEPLOYMENT_TARGET%/node_modules/typescript/bin/tsc -p ."
+    "postinstall": "tsc -p ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,9 @@
     "xml",
     "balance"
   ],
+  "engines": {
+    "node": ""
+  },
   "author": "Matt Mazzola",
   "license": "MIT",
   "bugs": {
